...
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/userLogoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log Out" />

            <Button
                android:id="@+id/createProjectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create" />

            <Button
                android:id="@+id/startPomodoroBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Pomodoro" />

            <Button
                android:id="@+id/startReportBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report" />
...
